--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 <!-- main css -->
     <link rel="stylesheet" href="./css/main.css">
-    <title>Profolio</title>
+    <title>My Profolio</title>
 </head>
 <body>
     <!-- overlay  -->
